@@ -21,10 +21,10 @@
 .\"
 .\" Portions Copyright (c) 2007 Gunnar Ritter, Freiburg i. Br., Germany
 .\"
-.\" Sccsid @(#)vc.1	1.9 (gritter) 2/5/07
+.\" Sccsid @(#)vc.1	1.10 (gritter) 3/25/07
 .\"
 .\" from OpenSolaris vc 1 "5 Jul 1990" "SunOS 5.11" "User Commands"
-.TH VC 1 "2/5/07" "Heirloom Development Tools" "User Commands"
+.TH VC 1 "3/25/07" "Heirloom Development Tools" "User Commands"
 .SH NAME
 vc \- version control
 .SH SYNOPSIS
@@ -55,7 +55,7 @@ Input lines beginning with a backslash (\fB\e\fR) followed by a control characte
 to the standard output with the backslash removed.
 Lines beginning with a backslash followed by a non-control character are copied in their entirety.
 .PP
-A keyword is composed of 9 or less alphanumerics; the first must be alphabetic.
+A keyword is composed of alphanumerics; the first must be alphabetic.
 A value is any \s-1ASCII\s+1 string that can be created with \fIed\fR; a numeric
 value is an unsigned string of digits.
 Keyword values may not contain blanks or tabs.
@@ -212,5 +212,14 @@ Print \fImessage\fR followed by:
 .sp
 on the diagnostic output.
 \fIvc\fR halts execution, and returns an exit code of \fB1\fR.
+.SH "ENVIRONMENT VARIABLES"
+.TP
+.BR LANG ", " LC_ALL
+See
+.IR locale (7).
+.TP
+.B LC_CTYPE
+Determines the mapping of bytes to characters
+for the control character.
 .SH SEE ALSO
 ed(1)
